tests/error/modifier_errors/pytket_w_discard.err
Error: Type mismatch (at $FILE:15:11)
   | 
13 | def foo(q: qubit) -> bool:
14 |     b = guppy_circ(q)
15 |     return b
   |            ^ Expected return value of type `bool`, got `None`

Guppy compilation failed due to 1 previous error
